      it was my fault as BINARY was being passed and not BLOB for
      setinputsizes (also unit tests werent even setting input sizes).

    - auto_setinputsizes defaults to True for Oracle, fixed cases where
      it improperly propigated bad types.

- mysql:
    - added a catchall **kwargs to MSString, to help reflection of 
      obscure types (like "varchar() binary" in MS 4.0)

- orm:
    - the full featureset of the SelectResults extension has been merged
      into a new set of methods available off of Query.  These methods
      all provide "generative" behavior, whereby the Query is copied
      and a new one returned with additional criterion added.  
      The new methods include:

          filter() - applies select criterion to the query
          filter_by() - applies "by"-style criterion to the query
          avg() - return the avg() function on the given column
          join() - join to a property (or across a list of properties)
          outerjoin() - like join() but uses LEFT OUTER JOIN
          limit()/offset() - apply LIMIT/OFFSET
          range-based access which applies limit/offset:  
             session.query(Foo)[3:5]
          distinct() - apply DISTINCT
          list() - evaluate the criterion and return results
          
      no incompatible changes have been made to Query's API and no methods
      have been deprecated.  Existing methods like select(), select_by(),
      get(), get_by() all execute the query at once and return results
      like they always did.  join_to()/join_via() are still there although
      the generative join()/outerjoin() methods are easier to use.
      
    - the return value for multiple mappers used with instances() now returns
      a cartesian product of the requested list of mappers, represented
      as a list of tuples.  this corresponds to the documented behavior.
      So that instances match up properly, the "uniquing" is disabled when 
      this feature is used.
